--- a/Templates/Minimal/TailBlazorWasm/Components/DarkSwitch/DarkSwitch.razor
+++ b/Templates/Minimal/TailBlazorWasm/Components/DarkSwitch/DarkSwitch.razor
@@ -1,3 +1,13 @@
 @namespace TailBlazorWasm.Components
 
-<fluent-switch title="toggle dark mode" @onclick="switchTheme" current-checked=isLightMode />
+@* <fluent-switch title="toggle dark mode" @onclick="switchTheme" current-checked=isLightMode /> *@
+
+<div class="absolute p-2 group max-w-min select-none" role="button"  @onclick="switchTheme" @onkeypress="(e) => Console.WriteLine(e.Key)">
+    <div class="px-[2px] flex justify-between  h-6 w-12 bg-gray-600 rounded-full ">
+        <div class="group duration-100  @(isLightMode ? "opacity-0"   : "opacity-100")">🌜</div>
+        <div class="group duration-100  @(isLightMode ? "opacity-100" : "opacity-0"  )">🌞</div>
+    </div>
+    <div class="group theme-knob @(isLightMode ? "" :  "translate-x-6") "></div>
+</div>
+
+@* group-focus:ring-2 ring-blue-500 *@
